Revision history for Perl extension MooseX-AttributeHelpers

0.03
    ~~ more misc. doc updates ~~
    
    * MooseX::AttributeHelpers::Counter
      - now provides default attribute options for 'is',
      'isa', 'provides', and 'default' if not specified.
    
    * MooseX::AttributeHelpers::Base
      - added attribute $name to the params passed to
        process_options_or_provides(), which gives us more
	    flexibility when writing additional helpers
      - removed check for 'provides' and 'isa' attr
        options before _process_options. It should be
        called always.    

0.02 Thurs. Sept. 13, 2007
    ~~ some misc. doc updates ~~

    * MooseX::AttributeHelpers::Base
      - now providing subrefs for the reader and writer 
        methods to all the method provider constructors
        (this should speed things up quite a bit).
        - all method providers now use this internally

    * MooseX::AttributeHelpers::Counter
      - added the 'reset' method 
    
    * MooseX::AttributeHelpers::Collection::Array
      - Extracted the List method provider role from 
        Array and made Array consume List.

    + MooseX::AttributeHelpers::Collection::List
      - created the Collection::List metaclass
        derived from parts of the old Collection::Array 

0.01 Mon. Aug. 13, 2007
    - module released to CPAN