@@ -13,7 +13,10 @@ Revision history for Perl extension MooseX-AttributeHelpers
 	    flexibility when writing additional helpers
       - removed check for 'provides' and 'isa' attr
         options before _process_options. It should be
-        called always.    
+        called always.   
+        
+    * MooseX::AttributeHelpers::MethodProvider::Array
+      - added `delete` and `insert` methods 
 
 0.02 Thurs. Sept. 13, 2007
     ~~ some misc. doc updates ~~
